apps/harbor/overlays/prod/HTTPRoutes/harbor-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-route
  namespace: test
spec:
  parentRefs:
    - name: scdb-gateway
      namespace: default
      sectionName: http
  hostnames:
    - harbor.prod.home.dblanchet.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: harbor-portal
          port: 80
