apps/harbor/overlays/prod/HTTPRoutes/harbor-secure-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor-secur-route
  namespace: harbor
spec:
  parentRefs:
    - name: scdb-gateway
      namespace: default
      sectionName: https-prod-harbor
  hostnames:
    - harbor.prod.home.dblanchet.net
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /api/
      - path:
          type: PathPrefix
          value: /service/
      - path:
          type: PathPrefix
          value: /v2/
      - path:
          type: PathPrefix
          value: /c/
      backendRefs:
      - name: harbor-core
        port: 80

    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: harbor-portal
        port: 80
